src/style.css
body {
  font-family: "Dancing Script", cursive;
  font-weight: lighter;
}

h1 {
  color: rgb(39, 191, 247);
  font-size: 38px;
  font-weight: 100;
  line-height: 28px;
  margin-bottom: 20px;
}

ul {
  margin: 0;
  padding: 0;
}
li {
  list-style: none;
  margin: 0;
  padding: 0;
  text-transform: capitalize;
  color: rgb(8, 121, 163);
  font-size: 20px;
  font-weight: 80;
  line-height: 20px;
}

.weather-app-wrapper {
  max-width: 700px;
  margin: 30px auto;
}
.weather-app {
  background-image: url(https://images.pexels.com/photos/3377538/pexels-photo-3377538.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500);
  max-width: 700px;
  margin: 0 auto;
  padding: 20px;
  border: 2px solid rgb(8, 121, 163);
  border-radius: 5px;
}
.weather-overview {
  margin-bottom: 20px;
  margin-top: 10px;
  padding-top: 10px;
}
.weather-image img {
  margin-right: 20px;
  padding-bottom: 10px;
  margin-bottom: 20px;
  height: 74px;
  width: 64px;
}
.weather-image strong {
  color: rgb(39, 191, 247);
  margin-bottom: 20px;
  line-height: 1;
  font-size: 60px;
}
.weather-image .units {
  position: relative;
  font-size: 16px;
  top: -32px;
  font-size: 15px;
}

.source-code {
  text-align: center;
  display: block;
  font-size: 15px;
}
.weather-image .active,
.fahr {
  color: rgb(8, 121, 163);
  cursor: default;
}
.weather-image .active:hover,
.fahr:hover {
  text-decoration: none;
  cursor: default;
}
.weather-forecast {
  margin-top: 10px;
  margin-left: 70px;
  text-align: justify;
  margin-left: -10px;
}

.weather-forecast h3 {
  color: rgb(8, 121, 163);
  font-size: 20px;
  font-weight: 400;
  text-align: center;
  height: 15px;
  line-height: 15px;
  padding-top: 7px;
}

.weather-forecast img {
  display: block;
  margin: 0 auto;
  height: 48px;
  width: 48px;
}

.weather-forecast-temperature {
  text-align: center;
  color: rgb(8, 121, 163);
  font-size: 15px;
  font-weight: 400;
  height: auto;
  line-height: 15px;
  white-space: nowrap;
}
.weather-description {
  padding-left: 50px;
  margin-top: 15px;
  margin-bottom: 15px;
}
.location-button {
  width: 40px;
  padding: 5px 5px 5px 5px;
  border: 2 solid black;
  border-radius: 5px;
  transition: all 200ms ease-in-out;
  background-color: #efefef;
  color: black;
}
.location-button:hover {
  color: #efefef;
  background-color: #e3e3e5;
}

.location-icon {
  width: 25px;
  position: relative;
  padding: 5px 5px 5px 5px;
}
.search-button {
  position: relative;
  padding: 5px 5px 5px 5px;

  border: 0.9 solid black;
  border-radius: 5px;
  transition: all 200ms ease-in-out;
  background-color: #efefef;
  color: black;
}
.search-button:hover {
  color: #efefef;
  background-color: #e3e3e5;
}

.current-date {
  font-size: 38px;
  color: rgb(39, 191, 247);
}

